--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "eslint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "email": "copy .env .\\node_modules\\react-email && email dev --dir email --port 3001"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -25,6 +26,8 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "^0.5.5",
+    "@react-email/render": "^1.3.1",
     "@stripe/react-stripe-js": "^5.0.0",
     "@stripe/stripe-js": "^8.0.0",
     "@uploadthing/react": "^7.3.3",
@@ -40,8 +43,10 @@
     "query-string": "^9.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-email": "^4.2.12",
     "react-hook-form": "^7.63.0",
     "recharts": "^3.2.1",
+    "resend": "^6.1.2",
     "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
@@ -55,6 +60,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@prisma/client": "^6.16.1",
+    "@react-email/preview-server": "^4.2.12",
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.18",
