--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "email": "copy .env .\\node_modules\\react-email && email dev --dir email --port 3001"
+    "email": "copyfiles .env ./node_modules/react-email && email dev --dir email --port 3001"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -68,6 +68,7 @@
     "@types/react-dom": "^19",
     "@types/ws": "^8.18.1",
     "bufferutil": "^4.0.9",
+    "copyfiles": "^2.4.1",
     "dotenv": "^17.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
